# develop_suit

./: .gitignore  .gitmodules  AGENTS.md  README.md
.github/workflows/: debug_middleware_qemu_artifacts.yml  debug_qemu_containers.yml  package_boost.yml  package_cgal.yml  package_clang.yml  package_fdw_dependencies.yml  package_fontconfig.yml  package_gdal.yml  package_groonga.yml  package_image.yml  package_llvm_dependencies.yml  package_llvmsdk.yml  package_middleware.yml  package_nginx.yml  package_nodejs.yml  package_openjdk.yml  package_osxcross.yml  package_perl.yml  package_postgis_dependencies.yml  package_postgresql.yml  package_postgresql18_dist.yml  package_postgresql_dependencies.yml  package_python.yml  package_python_dependencies.yml  package_tcl.yml  package_v8.yml  stage0-rootfs.yml  stage1-rootfs.yml  stage_llvm-rootfs.yml  stage_llvm_dependencies.yml  stage_llvmsdk.yml  stage_mingw64-native-windows-test.yml  stage_mingw64-native.yml  stage_osxcross.yml  stage_python-rootfs.yml  stage_tools-image.yml
stage-mingw64/: Dockerfile  README.md  build.sh  build_mingw64_native.sh  image.sh
stage-mingw64/mount_root/: build_binutils.sh  container_build.sh  container_native_build.sh
stage-mingw64/mount_root/patches/: binutils-2.46.0-windows-gnu.patch
stage0/: CMakeLists.txt  README.md  build.sh  busybox-stage0.configfrag
stage0/cmake/: clang-target.sh.in  merge_busybox_config.cmake  stage_clang_runtime_overlay.cmake  stage_gcc_runtime_overlay.cmake  stage_runtime_layout.cmake
stage1/: CMakeLists.txt  Dockerfile  README.md  build.sh  image.sh  prepare.sh  smoke-test.sh
stage1/cmake/: Stage1Autotools.cmake  Stage1CompressionPackages.cmake  Stage1CryptoPackages.cmake  Stage1Helpers.cmake  Stage1ScriptingPackages.cmake  Stage1UtilityPackages.cmake  clang-target.sh.in  ldd.in  perl-cross-local-ssh.sh.in  stage1-env.sh.in  stage_ldso_cache.cmake
stage_llvm/: README.md  build.sh  image.sh  smoke-test.sh
stage_osxcross/: README.md  build.sh  build_llvm_sdk.sh  custom_build.sh
stage_osxcross/mount_root/: container_build.sh  container_custom_build.sh  container_llvm_dep.sh  container_llvm_sdk.sh  custom_cctools.sh  custom_liblto.sh  custom_libtapi.sh  custom_xar.sh
stage_osxcross/mount_root/patch/: readline-msys2-export-all-symbols.patch
stage_python/: CMakeLists.txt  Dockerfile  README.md  build.sh  image.sh
stage_python/cmake/: StagePythonBuildToolPackages.cmake  StagePythonHelpers.cmake  StagePythonHostBuild.cmake  StagePythonPatchLibiconvConfig.cmake  StagePythonPythonSupportPackages.cmake  StagePythonTargetBuild.cmake  clang-target.sh.in
stage_python/tests/: test_ctypes_puts.py  test_multiprocessing.py  test_multithreading.py  test_sqlite.py
stage_tools/: Dockerfile  README.md  base_image_check.sh  build.sh  image.sh  smoke-test.sh
stage_tools/mount_root/: CMakeLists.txt  build_cmake.sh  build_file_package.sh  verify_bash_deps.sh
stage_tools/tests/bash/: bash-features.sh
stage_tools/tests/meson-cross/: hello.c
stages/stage0/: README.md  build.sh
stages/stage0/cmake/: clang-target.sh.in  merge_busybox_config.cmake
stages/stage1/: README.md  build.sh  image.sh  prepare.sh  smoke-test.sh
stages/stage1/cmake/: Stage1Autotools.cmake  Stage1CompressionPackages.cmake  Stage1CryptoPackages.cmake  Stage1Helpers.cmake  Stage1TerminalPackages.cmake  Stage1UtilityPackages.cmake  ldd.in
stages/stage_llvm/: Dockerfile  README.md  build.sh  image.sh  smoke-test.sh
stages/stage_mingw64/: Dockerfile  README.md  build.sh  build_mingw64_native.sh  image.sh  smoke-test.sh
stages/stage_mingw64/mount_root/: build_binutils.sh  container_build.sh  container_native_binutils.sh  container_native_build.sh
stages/stage_python/: CMakeLists.txt  README.md  build.sh  image.sh  smoke-test.sh
stages/stage_python/cmake/: StagePythonBuildToolPackages.cmake  StagePythonHelpers.cmake  StagePythonInterpreterPackages.cmake
stages/stage_python/tests/: test_readline_ncurses_uuid.py  test_urllib.py
stages/stage_tools/: Dockerfile  README.md  base_image_check.sh  build.sh  image.sh  smoke-test.sh
stages/stage_tools/mount_root/: CMakeLists.txt  container_build.sh  install_meson_zipapp.sh  install_pcre2.sh
stages/stage_tools/tests/cmake-cross/: CMakeLists.txt  hello.c  hello.cpp
stages/stage_tools/tests/meson-cross/: hello.cpp  meson.build
